hack/istio/ambient/echo-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo-server
  labels:
    app: echo-server
spec:
  containers:
  - name: echo-server
    image: ealen/echo-server
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
